objects/Scripts__kav.object
<CustomObject><fields>
        <fullName>Attachments_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachments_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachments_4__c</fullName>
        <label>Attachment 4</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachments__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields><fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <length>131072</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Scripts</description><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>Scripts</label><pluralLabel>Scripts</pluralLabel></CustomObject>